; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dynamic-user.c_unlockfp.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dynamic-user.c_unlockfp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_ULOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @unlockfp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unlockfp(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %13

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @F_ULOCK, align 4
  %11 = call i32 @lockf(i32 %9, i32 %10, i32 0)
  %12 = load i32*, i32** %2, align 8
  store i32 -1, i32* %12, align 4
  br label %13

13:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @lockf(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
